# numpyro-oop

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pytest.yml  python-publish.yml
examples/: demo.ipynb
numpyro_oop/: __init__.py  core.py
scripts/: demo.ipynb  demo_1.ipynb  glm_demo.ipynb
tests/: test_core.py
